--- a/style/styles.css
+++ b/style/styles.css
@@ -24,6 +24,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 20px;
+    font-family: "Montserrat", serif;
 }
 
 .question {
