--- a/style/styles.css
+++ b/style/styles.css
@@ -442,11 +442,16 @@ background: white;
     padding: 20px;
     background: white;
     border-radius: 10px;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
     overflow: hidden;
 }
-
+.wadah{
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    gap: 10px;
+}
 .course-container:hover {
     transform: scale(1.02);
     opacity: 0.95;
@@ -473,6 +478,7 @@ background: white;
     border-radius: 10px;
     transition: all 0.3s ease;
     cursor: grab;
+    max-height: 50px;
 }
 
 .course:hover {
